--- a/src/assets/sass/app.sass
+++ b/src/assets/sass/app.sass
@@ -1,4 +1,10 @@
 @import tailwind
 
-body
-    background-color: grey
+.App
+    background-color: #FF3CAC
+    background-image: linear-gradient(150deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%)
+    height: 100vh
+    .item
+        box-shadow: inset 0 0 60px whitesmoke, inset 20px 0 80px #f0f, inset -20px 0 80px #0ff, inset 20px 0 300px #f0f, inset -20px 0 300px #0ff, 0 0 50px #fff, -10px 0 80px #f0f, 10px 0 80px #0ff
+        min-height: 200px
+        min-width: 200px
